<resources>
    <string name="app_name">GPAcalculator</string>
    <string name="name">Student Name : </string>
    <string name="student_department">Student Department :</string>
    <string name="student_gpa">Student CGPA :</string>
    <string name="add_new_user">Add New User</string>
    <string name="enter_gpa">Enter GPA</string>
    <string name="enter_department">Enter Department</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="letter_grade">Letter Grade :</string>
    <string name="credits">Credits :</string>
    <string name="course_code">Course Code :</string>
    <string name="iv_semester">IV. Semester</string>
    <string name="iii_semester">III. Semester</string>
    <string name="ii_semester">II. Semester</string>
    <string name="i_semester">I. Semester</string>
    <string name="viii_semester">VIII. Semester</string>
    <string name="vii_semester">VII. Semester</string>
    <string name="vi_semester">VI. Semester</string>
    <string name="v_semester">V. Semester</string>
    <string name="semester_gpa">Semester GPA : </string>
    <string name="add_course">Add Course</string>
    <string name="enter_code">Enter Code</string>
    <string name="course_credits">Course Credits</string>
    <string name="enter_grade">Enter Grade</string>
    <string name="student_name">Student Name:</string>
    <string name="semester_code">Semester:</string>
    <string name="total_credits">Total Credits :</string>
    <string name="cancel">Cancel</string>
    <string name="add_profile">Add Profile</string>
    <string name="semester">Semester:</string>
</resources>