<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".dialog.AddUserDialog"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Add User"
        android:textSize="25sp"
        android:textStyle="bold"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:hint="@string/enter_name"
            android:textSize="20sp"
            tools:text="Test Name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_department"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_department"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_department_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_department"
            android:textSize="20sp"
            tools:text="Test Department" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="6dp">

        <TextView
            android:id="@+id/tv_gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student_gpa"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_gpa_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:hint="@string/enter_gpa"
            android:textSize="20sp"
            tools:text="Test GPA" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />


</LinearLayout>