<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.GradesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semester_gpa"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tv_gpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2.05"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" | "
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cumulative GPA : "
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tv_cgpa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="2.05"
            android:textSize="20sp"
            android:textStyle="bold"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_1st"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/i_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />

        <Button
            android:id="@+id/b_2nd"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/ii_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            />

        <Button
            android:id="@+id/b_3rd"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/iii_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            />

        <Button
            android:id="@+id/b_4th"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/iv_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/b_5th"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/v_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            />

        <Button
            android:id="@+id/b_6th"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/vi_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            />

        <Button
            android:id="@+id/b_7th"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/vii_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/b_8th"
            android:layout_width="95dp"
            android:layout_height="50dp"
            android:text="@string/viii_semester"
            android:textSize="8sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:singleLine="true"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewlecture"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_lecture"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

</LinearLayout>